# MayaIntersectionMarker

./: .gitignore  CMakeLists.txt  LICENSE  MayaIntersectionMarker.in  NOTICE.md  README.md  build.bat  buildAll.bat  mayaConfigure.bat
scripts/: AEintersectionMarkerTemplate.mel  userSetup.py
src/: EmbreeKernel.cpp  EmbreeKernel.h  KDTreeKernel.cpp  KDTreeKernel.h  OctreeKernel.cpp  OctreeKernel.h  SpatialDivisionKernel.cpp  SpatialDivisionKernel.h  intersectionMarkerCommand.cpp  intersectionMarkerCommand.h  intersectionMarkerData.h  intersectionMarkerDrawOverride.cpp  intersectionMarkerDrawOverride.h  intersectionMarkerNode.cpp  intersectionMarkerNode.h  main.cpp  utility.h
src/kernel/: EmbreeKernel.cpp  EmbreeKernel.h  KDTreeKernel.cpp  KDTreeKernel.h  OctreeKernel.cpp  OctreeKernel.h
supplimental/colorscope/: Cargo.toml
supplimental/colorscope/src/: main.rs
